--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,10 @@ Werkzeug==0.11.10
 click==6.6
 gunicorn==19.6.0
 itsdangerous==0.24
-requests==2.10.0
-wsgiref==0.1.2
+requests
+pyopenssl
+ndg-httpsclient
+pyasn1
+wsgiref
+pymessenger==0.0.7.0
+PyDrive
